--- a/package.json
+++ b/package.json
@@ -7,24 +7,53 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mercadopago/sdk-react": "^0.0.19",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.8.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.1.0",
+    "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "browserify-zlib": "^0.2.0",
+    "cors": "^2.8.5",
+    "customize-cra": "^1.0.0",
+    "dotenv": "^16.4.5",
+    "express-validator": "^7.2.0",
+    "https-browserify": "^1.0.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "jws": "^4.0.0",
+    "jwt-decode": "^4.0.0",
+    "mercadopago": "^2.0.15",
+    "mysql2": "^3.11.0",
+    "pbkdf2": "^3.1.2",
+    "process-nextick-args": "^2.0.1",
+    "randombytes": "^2.1.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
-    "sass": "^1.77.2",
-    "styled-components": "^6.1.11",
+    "sass": "^1.77.8",
+    "sequelize": "^6.37.3",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "stream-http": "^3.2.0",
+    "stripe": "^17.2.1",
+    "styled-components": "^6.1.13",
+    "url": "^0.11.4",
+    "url-browserify": "^1.3.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,5 +73,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "react-error-overlay": "^6.0.9",
+    "react-scripts": "^5.0.1",
+    "source-map-loader": "^0.2.4",
+    "stream-browserify": "^3.0.0",
+    "vm-browserify": "^1.1.2",
+    "webpack": "^5.97.1",
+    "webpack-dev-server": "^5.2.0"
   }
 }
